// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alias API /api/alias GET should retun all alias 1`] = `
Array [
  Object {
    "aliasId": 1,
    "createdAt": "2018-01-01T00:00:00.000Z",
    "createdBy": 1,
    "description": "test",
    "enabled": true,
    "name": "testone",
    "sceneId": 1,
    "updatedAt": "2018-01-02T00:00:00.000Z",
  },
  Object {
    "aliasId": 2,
    "createdAt": "2018-01-01T00:00:00.000Z",
    "createdBy": 1,
    "description": "test",
    "enabled": false,
    "name": "testtwo",
    "sceneId": 1,
    "updatedAt": "2018-01-02T00:00:00.000Z",
  },
]
`;

exports[`Alias API /api/alias POST should create a new alias 1`] = `
Object {
  "createdBy": 1,
  "description": "test",
  "enabled": false,
  "name": "test_post",
  "sceneId": 1,
}
`;

exports[`Alias API /api/alias POST should create a new alias 2`] = `
Object {
  "alias_id": 3,
  "created_at": Any<Date>,
  "created_by": 1,
  "description": "test",
  "enabled": false,
  "name": "test_post",
  "scene_id": 1,
  "updated_at": Any<Date>,
}
`;

exports[`Alias API /api/alias/:id GET should retun an alias 1`] = `
Object {
  "aliasId": 1,
  "createdAt": "2018-01-01T00:00:00.000Z",
  "createdBy": 1,
  "description": "test",
  "enabled": true,
  "name": "testone",
  "sceneId": 1,
  "updatedAt": "2018-01-02T00:00:00.000Z",
}
`;

exports[`Alias API /api/alias/:id PATCH should update an alias 1`] = `
Object {
  "alias_id": 1,
  "created_at": Any<Date>,
  "created_by": 1,
  "description": "test",
  "enabled": true,
  "name": "test_update",
  "scene_id": 2,
  "updated_at": Any<Date>,
}
`;

exports[`Alias API /api/alias/:id/:enabled should disable an alias 1`] = `
Object {
  "alias_id": 1,
  "created_at": Any<Date>,
  "created_by": 1,
  "description": "test",
  "enabled": false,
  "name": "testone",
  "scene_id": 1,
  "updated_at": Any<Date>,
}
`;

exports[`Alias API /api/alias/:id/:enabled should enable an alias 1`] = `
Object {
  "alias_id": 2,
  "created_at": Any<Date>,
  "created_by": 1,
  "description": "test",
  "enabled": true,
  "name": "testtwo",
  "scene_id": 1,
  "updated_at": Any<Date>,
}
`;
